test(application): brandHandler
added usual tests also

also i used the beforeEach anotation for more clean code :de: