@@ -1,9 +1,12 @@
 package com.emazon.stock_microservice.application.handler;
 
-import com.emazon.stock_microservice.application.dto.CategoryRequest;
+import com.emazon.stock_microservice.application.dto.CategoryDTO;
 import com.emazon.stock_microservice.application.mapper.CategoryRequestMapper;
+import com.emazon.stock_microservice.application.mapper.PageMapper;
 import com.emazon.stock_microservice.domain.api.ICategoryServicePort;
 import com.emazon.stock_microservice.domain.model.Category;
+import com.emazon.stock_microservice.domain.util.pageable.CustomPage;
+import com.emazon.stock_microservice.domain.util.pageable.CustomPageRequest;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
@@ -19,44 +22,51 @@ import java.util.stream.Collectors;
 @Transactional
 public class CategoryHandler implements ICategoryHandler {
 
-    private final ICategoryServicePort categoryServicePort;
+    private final ICategoryServicePort categoryUseCase;
     private final CategoryRequestMapper categoryRequestMapper;
 
-
     @Override
-    public void saveCategory(CategoryRequest categoryRequest) {
-        Category category = categoryRequestMapper.toCategory(categoryRequest);
-        categoryServicePort.saveCategory(category);
+    public Page<CategoryDTO> getAllCategoriesPaged(Pageable pageable) {
+        // de page.spring a page.domain
+        CustomPageRequest customPageRequest = new CustomPageRequest(pageable.getPageNumber(),pageable.getPageSize(),pageable.getSort().isSorted());
+        // get all the categories from the domain in page.domain format
+        CustomPage<Category> customPage = categoryUseCase.getAllCategoriesPaged(customPageRequest);
+        //then covert the custom page to page.spring
+        return PageMapper.toSpringPage(new CustomPage<>(customPage.getContent().stream().map(categoryRequestMapper::toCategoryRequest).toList(),
+                customPage.getTotalElements(),
+                customPage.getTotalPages(),
+                customPage.getCurrentPage(),
+                customPage.isAscending()));
     }
 
     @Override
-    public CategoryRequest getCategory(Long id) {
-        Category category = categoryServicePort.getCategoryById(id);
+    public void saveCategory(CategoryDTO categoryDTO) {
+        Category category = categoryRequestMapper.toCategory(categoryDTO);
+        categoryUseCase.saveCategory(category);
+    }
+
+    @Override
+    public CategoryDTO getCategory(Long id) {
+        Category category = categoryUseCase.getCategoryById(id);
         return categoryRequestMapper.toCategoryRequest(category);
     }
 
     @Override
-    public void updateCategory(CategoryRequest categoryDTO) {
-        Category existingCategory = categoryServicePort.getCategoryByName(categoryDTO.getName());
+    public void updateCategory(CategoryDTO categoryDTO) {
+        Category existingCategory = categoryUseCase.getCategoryByName(categoryDTO.getName());
         existingCategory.setDescription(categoryDTO.getDescription());
-        categoryServicePort.updateCategory(existingCategory);
+        categoryUseCase.updateCategory(existingCategory);
     }
 
     @Override
     public void deleteCategory(long id) {
-        categoryServicePort.deleteCategoryById(id);
+        categoryUseCase.deleteCategoryById(id);
     }
 
-    @Override
-    public Page<CategoryRequest> getAllCategoriesPaged(Pageable pageable) {
-        return categoryServicePort.getAllCategoriesPaged(pageable).map(categoryRequestMapper::toCategoryRequest);
-    }
+
 
     @Override
-    public List<CategoryRequest> getAllCategories() {
-        return categoryServicePort.getAllCategories()
-                .stream()
-                .map(categoryRequestMapper::toCategoryRequest)
-                .collect(Collectors.toList());
+    public List<CategoryDTO> getAllCategories() {
+        return categoryUseCase.getAllCategories().stream().map(categoryRequestMapper::toCategoryRequest).toList();
     }
 }
